# thermostat

./: .gitignore  Makefile  main.c  serial_if.c  serial_if.h
host/: Makefile.am  configure.ac
host/src/: Makefile.am  application.cpp  application.h  main.c  main.cpp  msgqueue.h  serial_if.c  serial_if.h
host/src/controller/: controller.cpp  controller.h
host/src/model/: model.cpp  model.h
host/src/model/peripherals/: peripherals.h
host/src/model/peripherals/relay/: relay.cpp  relay.h
host/src/model/peripherals/serial_if/: serial_if.c  serial_if.h  serialif.cpp  serialif.h
host/src/views/: view.h
